# stream-nexus

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  package-lock.json  package.json  tsconfig.json  vitest.config.js  webpack.config.js
.github/: copilot-instructions.md
editor/: package-lock.json  package.json  tsconfig.json  webpack.config.js
editor/src/: App.tsx  index.html  styles.css
editor/src/components/: EditorCanvas.tsx  FramePanel.tsx  LayerPanel.tsx  SettingsPanel.tsx  Toolbox.tsx  TopBar.tsx
editor/src/hooks/: useWebSocket.ts
editor/src/types/: layout.ts
editor/src/utils/: tokens.ts
js/: seed.js  webpack.extension.js  webpack.userscript.js
js/extension/: background.js  manifest.chrome.json  manifest.firefox.json
js/extension/popup/: popup.css  popup.html  popup.js
js/src/: content-script.js  userscript.js
js/src/core/: config.js  index.js  message.js  recorder.js  seed.js  uuid.js
js/templates/: userscript-header.txt
js/test/fixtures/: kick-events.json
layouts/: default.json
public/: background.js  dashboard.js  overlay-elements.css  script.js  style.css
public/editor/: bundle.js  index.html
src/: database.rs  exchange.rs  layout.rs  main.rs  message.rs  sneed_env.rs
src/frontend/background/: DonationMatter.ts  background.ts  index.ts
src/frontend/dashboard/: dashboard.css  dashboard.js  dashboard.ts
src/frontend/overlay/: script.js  (+2 more)
src/js/: matter.js
src/web/: client.rs  message.rs  mod.rs  server.rs
templates/: background.html  chat.html  dashboard.html  frame.html  home.html  message.html  overlay.html
(+4 files in other folders)
