[package]
name = "stream-nexus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.3"
actix-web-actors = "4.3"
ammonia = "4"
anyhow = "1.0"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
chrono = "0.4.26"
dotenvy = "0.15"
futures = "0.3.28"
grass = "0.13.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = { version = "0.39" }
rand = "0.8"
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.29.1"
uuid = { version = "1.4.1", features = ['v4', 'fast-rng', 'serde'] }
